fixed navbrink shrink on mobile devices

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -71,7 +71,7 @@
   z-index: 100;
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
-  padding: 0.5rem 2rem 0.5rem;
+  padding: 0.5rem 4rem  0.5rem 1rem;
   transform-origin: top center;
   transition: all 0.4 ease;
 }
